# mneme

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  __init__.py  docker-compose.yaml  gradio_chat.py  pyproject.toml
api/: __init__.py  dependencies.py  main.py  middleware.py
api/models/: __init__.py  chat.py  common.py  enums.py  health.py  ingestion.py
api/routes/: __init__.py  chat.py  health.py  ingestion.py
config/: __init__.py  settings.py
ingestion/: __init__.py  chunker.py  embedder.py  ingest.py  parser.py  vectorstore.py
rag/: __init__.py  agent.py  prompts.py  retriever.py
scripts/: setup.sh  test-qdrant.py  test_rag.py
utils/: __init__.py  logging.py
